tests/errors/init_state/overwrite/overwrite_non_drop_move_only_errors.err.expected
error: at 8:13: [INIT-OverwriteWithoutDrop] In function 'f', block 'entry': cannot overwrite 'y': type Custom("A") is not Drop and the value is still live (consume it via `drop y` first)
   |
 8 |             y = move a2;
   |             ^^^^^^^^^^^
